replays/errorlog-20181104-082428-0500-1541337868-32-32-1.log

Turn 1
================================================================
error: communication error with bot: Problem writing to pipe, errno was: 0 (No error)
Last input received was:

    for dropoff in me.get_dropoffs():
    ^
IndentationError: unexpected indent

